--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "app",
-
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +21,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
